# llm-comparator-challenging-question

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: main.py  question_generator.py
src/models/: question.py  response.py
src/providers/: anthropic_impl.py  base.py  gemini_impl.py  groq_impl.py  ollama_impl.py  openai_client_helper.py  openai_impl.py
tests/: conftest.py  test_base_provider.py  test_judge.py  test_models.py  test_openai_client_helper.py
